--- a/EducationManager.API/appsettings.json
+++ b/EducationManager.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "educationmanager": "Server=PHAMMINH202;Database=educationmanager;Trusted_Connection=True;"
+    "educationmanager": "Server=LAPTOP-3VG9829U\\SQLEXPRESS;Database=educationmanager;Trusted_Connection=True;"
   }
 }
